# gn-xp

./: .clang-format  .gitattributes  .gitignore  .gn  AUTHORS  BUILD  BUILD.gn  GN-DESIGN-NOTES.txt  LICENSE  LICENSE.md  OWNERS  README.md  README.recipes.md  README2.md  README5.md  build.ninja  build.ninja.d  build.sh  codereview.settings  cr-buildbucket.cfg  groups  last_commit_position.h  luci-milo.cfg  luci-scheduler.cfg  project.config  tidy.cpp
.github/workflows/: ci-build.yml  gn-xp.yml
base/: command_line.cc  environment.cc  environment.h  logging.cc  logging.h  template_util.h  values.h
base/allocator/: allocator_check.cc
base/debug/: thread_heap_usage_tracker.cc  thread_heap_usage_tracker_unittest.cc
base/files/: file.h  file_enumerator_win.cc  file_path.cc  file_path.h  file_posix.cc  file_util.cc  file_util.h  file_util_posix.cc  file_util_win.cc  file_win.cc  platform_file.h  scoped_temp_dir.cc
base/json/: json_file_value_serializer.cc
base/memory/: raw_scoped_refptr_mismatch_checker.h
base/power_monitor/: power_monitor.cc
base/process/: memory_linux.cc  memory_mac.mm  memory_unittest.cc  process_handle_win.cc  process_iterator.h
base/sampling_heap_profiler/: sampling_heap_profiler.cc
base/strings/: string_tokenizer.h  string_util.cc  utf_string_conversions.cc
base/synchronization/: condition_variable_win.cc  waitable_event_mac.cc  waitable_event_win.cc
base/system_monitor/: system_monitor.cc
base/threading/: platform_thread_mac.mm  platform_thread_win.cc
base/time/: time.cc  time.h  time_win.cc
base/trace_event/: memory_dump_manager.cc  memory_dump_manager_unittest.cc
base/win/: event_trace_controller.cc  event_trace_controller.h  event_trace_provider.cc  event_trace_provider.h  process_startup_helper.cc  registry.cc  registry.h  scoped_bstr.cc  scoped_bstr.h  scoped_variant.h  wait_chain.h  win_util.cc  wrapped_window_proc.cc  wrapped_window_proc.h
bld/: gen.py  gen_last_commit_position.py
bld/gn/: BUILD.gn  BUILDCONFIG.gn
demo/: BUILD.gn  BUILDCONFIG.gn  foo.py
docs/: faq.md  language.md  metadata.md  mingw.md  quick_start.md  reference.md  style_guide.md
examples/chrome_rust/: BUILD.gn  BUILDCONFIG.gn
examples/ios/: .gn
examples/ios/app/: AppDelegate.h  AppDelegate.m  BUILD.gn  Bar.swift  SceneDelegate.h  SceneDelegate.m  ViewController.m  hello_main.m  main.m
examples/ios/app/parser/: BUILD.gn  JSONValue.swift  Sanitizer.swift
examples/modules/: BUILD.gn  quux.cc
examples/simple_build/: .bazel_updated  .gn  BUILD.gn  MODULE.bazel  README.md  hello.cc  test.cc
examples/simple_build/concat/: BUILD.gn  concat.gni  concat.py  foo.txt
examples/simple_build/tools/: bazel
examples/simple_build/tutorial/: README.md  tutorial.cc
infra/: README.recipes.md  recipes.py
infra/config/: main.star  recipes.cfg
infra/recipes/: fuchsia.py  gn.py  ninja.py
misc/: help_as_html.py
misc/emacs/: gn-mode.el
misc/tm/: GN.tmLanguage
misc/vim/: README.md
recipes/: gn.py
recipes/gn.expected/: linux.json
src/: auto_reset_event.h  exe_path.cc  file_util.cc  file_util.h  last_commit_position.h  sema.cc  sema.h  ticks.cc  ticks.h  worker_pool.cc
src/base/: command_line.cc  compiler_specific.h  gtest_prod_util.h  logging.cc  logging.h
src/gn/: .ninja_target_writer_unittest.cc.kate-swp  .unique_key.cc.kate-swp  action_target_generator.cc  action_target_generator.h  action_target_generator_unittest.cc  action_values.h  analyzer.cc  analyzer.h  analyzer_unittest.cc  args.cc  args.h  args_unittest.cc  bazel_writer.cc  bazel_writer.h  binary_target_generator.cc  binary_target_generator.h  build_settings.cc  build_settings.h  builder.cc  builder.h  builder_record.cc  builder_record.h  builder_record_map.h  builder_record_map_unittest.cc  builder_unittest.cc  builtin_tool.cc  builtin_tool.h  bundle_data.cc  bundle_data.h  c_substitution_type.cc  c_substitution_type.h  c_tool.cc  c_tool.h  command_analyze.cc  command_args.cc  command_check.cc  command_clean.cc  command_clean_stale.cc  command_desc.cc  command_desc2.cc  (+279 more)
src/gn/format_test_data/: 040.golden  062.gn  062.golden  063.gn  063.golden  075.gn  075.golden  077.gn  077.golden  079.gn  079.golden  082.gn  082.golden  083.golden  085.gn  085.golden
src/starlark/: stargn_main.go  starlark_glue.go
src/starlark-go/: go.mod  stargn_main.cc  stargn_main.h  starlark_glue.cc  starlark_glue.go  starlark_glue.h
src/starlark-rs/: Cargo.toml  build.rs  gn_helpers.cc  gn_helpers.h  stargn_main.cc  stargn_main.h  stargn_main.rs  starlark_glue.cc  starlark_glue.h  starlark_loader.cc  starlark_loader.h
src/test/: test.h
src/util/: aligned_alloc.h  atomic_write_unittest.cc  build_config.h  exe_path.cc  exe_path.h  ipc_handle.cc  ipc_handle.h  ipc_handle_unittest.cc  msg_loop.cc  semaphore.h  stdio_redirect.cc  stdio_redirect.h  stdio_redirect_unittest.cc  sys_info.cc  sys_info.h  ticks.cc  worker_pool.cc  worker_pool.h  zos_util.cc  zos_util.h
test/: BUILD.gn  BUILDCONFIG.gn
test/toolchain/: BUILD.gn
tmp/: BUILD.gn  BUILDCONFIG.gn  b.c  b.h  c.c
tools/: build-gn.sh  find_unreachable.py  gn_ninja_outputs.py  update_protos.sh  update_reference.sh
tools/gn/: BUILD.gn  action_target_generator.cc  action_target_generator.h  action_values.cc  analyzer.cc  analyzer_unittest.cc  args.cc  args.h  args_unittest.cc  binary_target_generator.cc  binary_target_generator.h  build_settings.cc  build_settings.h  builder.cc  builder_unittest.cc  bundle_data.cc  bundle_data.h  bundle_data_target_generator.cc  bundle_data_target_generator.h  bundle_file_rule.cc  bundle_file_rule.h  c_include_iterator.cc  c_include_iterator.h  c_include_iterator_unittest.cc  c_substitution_type.cc  c_substitution_type.h  c_tool.cc  c_tool.h  command_analyze.cc  command_args.cc  command_check.cc  command_clean.cc  command_desc.cc  command_format.cc  command_format.h  command_format_unittest.cc  (+183 more)
tools/gn/format_test_data/: 066.gn  066.golden  071.gn  071.golden  072.gn  072.golden
util/: build_config.h  exe_path.cc  semaphore.cc  semaphore.h  sys_info.cc  ticks.cc  ticks.h  worker_pool.cc
(+110 files in other folders)
