# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("foobar") {
  deps = [":hello(//build/toolchain:gcc2)"]
}

if (current_toolchain != default_toolchain ) {
  executable("hello") {
    output_dir = root_build_dir
    output_name = "foobar"
    sources = [ "hello.cc" ]
  }
}
