[package]
name = "stargn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stargn"
path = "stargn_main.rs"

[dependencies]
anyhow = "1.0"
autocxx = "0.26.0"
cxx = "1.0"
starlark = "0.9.0"

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] } # For nicer error messages
