# Suppress sorting based on comment.

# NOSORT
sources = []

# NOSORT
sources = [
  "a",
]

# NOSORT
sources += [
  "a",
]

# NOSORT
# This is NOSORT because reason.
sources = [
  "z",
  "z2",
  "a",
  "y.cc",
]

# This is NOSORT because reason:
# NOSORT
sources += [
  "z",
  "z2",
  "a",
  "y.cc",
]

# This is SORT because reason:
# SORT
keys = [
  "z",
  "z2",
  "a",
  "y",
]

# This is SORTED as DEPS because reason:
# DEPSSORT
exclude_target = [
  "//z/a",
  ":z2",
  "//z/a:test",
  "y",
]
