# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ios/templates/swift_module.gni")

group("parser") {
  public_deps = [ ":Sanitizer" ]
}

swift_module("Sanitizer") {
  bridge_header = "Sanitizer-Bridge-Header.h"
  sources = [
    "JSONValue.swift",
    "Sanitizer.swift",
  ]
}
